<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sil_mock_publisher</name>
  <version>0.1.0</version>
  <description>SIL debug mock publisher for SAT and ODD topics (D1.3b). Replaced by real M1/M2 nodes at D2.5.</description>
  <maintainer email="marinehdk@gmail.com">MASS L3 Team</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>l3_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
