<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesxsd="1.0"?>
<package format="3">
  <name>l3_external_msgs</name>
  <version>0.1.0</version>
  <description>Cross-layer mock message definitions for L3 TDL external interfaces</description>
  <maintainer email="mass-adas@sango.com">MASS ADAS Team</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <!-- Wave 0 fix F-IMP-B-003: TrackedTargetArray uses l3_msgs/TrackedTarget[] (AoS) -->
  <build_depend>l3_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>l3_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
